--- a/src/main/resources/static/sorry/index.html
+++ b/src/main/resources/static/sorry/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sorry! 在线生成</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/static/w3.css" />
+    <link rel="stylesheet" href="../w3.css" />
     <!-- your code -->
 </head>
 
@@ -14,8 +14,8 @@
     <!-- Sidebar -->
     <div id="sidebar" class="w3-sidebar w3-bar-block w3-border-right" style="display:none">
         <button id="sidebar_close" class="w3-bar-item w3-large">&times;</button>
-        <a href="/tpl/sorry/" class="w3-bar-item w3-button">为所欲为</a>
-        <a href="/tpl/wangjingze/" class="w3-bar-item w3-button">我就是饿死</a>
+        <a href="../sorry/index.html" class="w3-bar-item w3-button">为所欲为</a>
+        <a href="../wangjingze/index.html" class="w3-bar-item w3-button">我就是饿死</a>
     </div>
 
     <!-- Show Button -->
@@ -26,7 +26,7 @@
     <!-- Main Frame -->
     <div class="w3-container w3-display-container w3-half">
         <div class="w3-container">
-            <img src="/static/wangjingze/example.png" alt="Lights" style="width:100%">
+            <img src="./sorry.webp" alt="Lights" style="width:100%">
             <h1 class="w3-text-blue">在线生成Sorry,动图</h1>
         </div>
 
@@ -36,28 +36,63 @@
                 <label class="w3-text-blue">
                     <b>第一句</b>
                 </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="我就是饿死">
+                <input class="w3-input w3-border" name="first" type="text" placeholder="好啊">
             </p>
 
             <p>
                 <label class="w3-text-blue">
                     <b>第二句</b>
                 </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="死外边 从这跳下去">
+                <input class="w3-input w3-border" name="first" type="text" placeholder="就算你是一流工程师">
             </p>
 
             <p>
                 <label class="w3-text-blue">
                     <b>第三句</b>
                 </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="也不会吃你们 一点东西">
+                <input class="w3-input w3-border" name="first" type="text" placeholder="就算你出报告再完美">
             </p>
 
             <p>
                 <label class="w3-text-blue">
                     <b>第四句</b>
                 </label>
-                <input class="w3-input w3-border" name="first" type="text" placeholder="真香">
+                <input class="w3-input w3-border" name="first" type="text" placeholder="我叫你改报告你就要改">
+            </p>
+
+            <p>
+                <label class="w3-text-blue">
+                    <b>第五句</b>
+                </label>
+                <input class="w3-input w3-border" name="first" type="text" placeholder="毕竟我是客户">
+            </p>
+
+            <p>
+                <label class="w3-text-blue">
+                    <b>第六句</b>
+                </label>
+                <input class="w3-input w3-border" name="first" type="text" placeholder="客户了不起啊">
+            </p>
+
+            <p>
+                <label class="w3-text-blue">
+                    <b>第七句</b>
+                </label>
+                <input class="w3-input w3-border" name="first" type="text" placeholder="sorry 客户真的了不起">
+            </p>
+
+            <p>
+                <label class="w3-text-blue">
+                    <b>第八句</b>
+                </label>
+                <input class="w3-input w3-border" name="first" type="text" placeholder="以后叫他天天改报告">
+            </p>
+
+            <p>
+                <label class="w3-text-blue">
+                    <b>第九句</b>
+                </label>
+                <input class="w3-input w3-border" name="first" type="text" placeholder="天天改 天天改">
             </p>
 
             <div id="result"></div>
@@ -75,8 +110,8 @@
             </a>
         </div>
     </div>
-    <script src="/static/cookies.js"></script>
-    <script src="/static/main.js"></script>
+    <script src="../cookies.js"></script>
+    <script src="../main.js"></script>
 </body>
 
 </html>
