--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>txtxtx</title>
+    <title>为所欲为</title>
 
     <meta name="author" content="lizhihao!">
 
@@ -22,6 +22,12 @@
 			</h1>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<p>
+			<div class="alert alert-danger" role="alert">根据提示填写内容，点击生成即可获得动图，服务器配置低，所以处理比较慢，请耐心等待。</div>
+			</p>
+		</div
 	<div class="row">
 		<p></p>
 		<div class="col-md-12">
@@ -55,7 +61,7 @@
 											2
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="sorry_sen" placeholder="就算你是一流工程师">
+											<input type="text" class="form-control" name="sorry_sen" placeholder="别说我是一等良民">
 										</div>
 									</div>
 									<div class="form-group">
@@ -63,7 +69,7 @@
 											3
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="sorry_sen" placeholder="就算你出报告再完美">
+											<input type="text" class="form-control" name="sorry_sen" placeholder="就算你们真的想要诬告我">
 										</div>
 									</div>
 									<div class="form-group">
@@ -71,7 +77,7 @@
 											4
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="sorry_sen" placeholder="我叫你改报告你就要改">
+											<input type="text" class="form-control" name="sorry_sen" placeholder="我有的是钱找律师帮我打官司">
 										</div>
 									</div>
 									<div class="form-group">
@@ -79,7 +85,7 @@
 											5
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="sorry_sen" placeholder="毕竟我是客户">
+											<input type="text" class="form-control" name="sorry_sen" placeholder="我想我根本不用坐牢">
 										</div>
 									</div>
 									<div class="form-group">
@@ -87,7 +93,7 @@
 											6
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="sorry_sen" placeholder="客户了不起啊">
+											<input type="text" class="form-control" name="sorry_sen" placeholder="你别以为有钱了不起啊">
 										</div>
 									</div>
 									<div class="form-group">
@@ -95,7 +101,7 @@
 											7
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="sorry_sen" placeholder="sorry 客户真的了不起">
+											<input type="text" class="form-control" name="sorry_sen" placeholder="sorry 有钱是真的能为所欲为的">
 										</div>
 									</div>
 									<div class="form-group">
@@ -103,7 +109,7 @@
 											8
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="sorry_sen" placeholder="以后叫他天天改报告">
+											<input type="text" class="form-control" name="sorry_sen" placeholder="不过我相信你不会明白这种感觉">
 										</div>
 									</div>
 									<div class="form-group">
@@ -111,7 +117,7 @@
 											9
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="sorry_sen" placeholder="天天改 天天改">
+											<input type="text" class="form-control" name="sorry_sen" placeholder="不明白 不明白">
 										</div>
 									</div>
 								</form>
@@ -155,7 +161,7 @@
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="wangjingze_sen" placeholder="真香">
-										</div>
+										</div><br><br><br><br>
 									</div>
 								</form>
 							</div>
@@ -166,20 +172,28 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-12">
-			<p></p>
+		<br><br>
+		<div class="col-md-12 text-center">
+			<label class="radio-inline">
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="simple" alt="小文件，质量低"> 精简模式(文件较小质量差)
+			</label>
+			<label class="radio-inline">
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="normal" checked alt="大文件，质量高"> 正常模式（文件较大清晰）
+			</label>
 		</div>
+		<br><br>
 	</div>
 	<div class="row">
 		<div class="col-md-12">
 			<input type="hidden" id="template" value="sorry">
-			<button id="render" type="button" class="btn btn-primary btn-lg center-block" data-toggle="modal" >
+			<button id="render" type="button" class="btn btn-primary btn-lg center-block" data-loading-text="生成中..." >
 				<!--data-target="#myModal"-->
 				生成
 			</button>
 		</div>
 	</div>
 	<div class="row">
+		<br><br>
 		<div class="col-md-12">
 			<p>
 				<img id="result" class="center-block img-responsive" src="">
@@ -189,7 +203,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				<div class="alert alert-danger" role="alert">本站只是1MB小水管，速度慢请见谅</div>
+				<div class="alert alert-success" role="alert">微信中，直接长按可以发送给朋友</div>
 			</p>
 			<div id="comment"></div>
 		</div>
@@ -208,6 +222,7 @@
 		$('#template').val(e.target.id)
 	})
 	$('#render').bind('click', function () {
+		var $btn = $(this).button('loading')
 		$('#render').prop('disabled', true);
 		var template = $('#template').val()
 		console.log(template)
@@ -219,7 +234,8 @@
 		})
 		var json = {
 			"templateName": template,
-			"sentence": all.join()
+			"sentence": all.join(),
+			"mode":$("input:checked").val()
 		}
 
 		$.ajax({
@@ -233,14 +249,20 @@
 				alert("生成成功！: " + msg.result);
 				$('#result').attr('src', msg.result);
 			} else {
-				alert("人太多了: " + msg.result);
-				$('#result').attr('src', 'http://csdnimg.cn/pubfooter/images/csdn_cs_qr.png');
+				alert("服务器爆掉了，请稍后再试！赞赏给作者点鼓励吧。");
+				$('#result').attr('src', 'http://p5m79jjxo.bkt.clouddn.com/money.jpg');
 			}
 		}).error(function (jqxhr, textStatus, errorThrown) {
-			alert("人太多了" + errorThrown);
+			alert("服务器爆掉了，请稍后再试！赞赏给作者点鼓励吧。");
+			$('#result').attr('src', 'http://p5m79jjxo.bkt.clouddn.com/money.jpg');
 		}).complete(function () {
-			$('#render').prop('disabled', false);
+//			$btn.button('reset')
+//			$('#render').prop('disabled', false);
 		});
+	});
+	$('#result').load(function() {
+		$('#render').button('reset')
+		$('#render').prop('disabled', false);
 	});
 	new Valine({
 		el: '#comment' ,
@@ -248,7 +270,7 @@
 		verify:false,
 		appId: 'MPDAOcDb8Ketrp38sEanS3Bz-gzGzoHsz',
 		appKey: 'caRGLJVeH7TdIUpBD1k2lGcY',
-		placeholder: 'txtxtx',
+		placeholder: '欢迎留言提供新素材',
 		path:window.location.pathname,
 		avatar:'mm'
 	});
