加快首页速度

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,8 +9,7 @@
 
     <meta name="author" content="lizhihao!">
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+  	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 <body>
@@ -44,7 +43,7 @@
 					<div class="tab-pane active" id="panel-223024">
 						<div class="row">
 							<div class="col-md-6">
-								<img class="center-block img-responsive" alt="为所欲为" src="sorry/sorry.webp">
+								<img class="center-block img-responsive" alt="为所欲为" src="http://p5m79jjxo.bkt.clouddn.com/sorry.webp">
 							</div>
 							<div class="col-md-6 pre-scrollable">
 								<form class="form-horizontal" role="form">
@@ -127,7 +126,7 @@
 					<div class="tab-pane" id="panel-445389">
 						<div class="row">
 							<div class="col-md-6">
-								<img class="center-block img-responsive" alt="王境泽" src="wangjingze/wangjingze.webp">
+								<img class="center-block img-responsive" alt="王境泽" src="http://p5m79jjxo.bkt.clouddn.com/wangjingze.webp">
 							</div>
 							<div class="col-md-6">
 								<form class="form-horizontal" role="form">
@@ -203,19 +202,21 @@
 			</p>
 		</div>
 	</div>
-	<!--<div class="row">-->
-		<!--<div class="col-md-12">-->
-			<!--<p>-->
-				<!--<div class="alert alert-success" role="alert">微信中，直接长按可以发送给朋友</div>-->
-			<!--</p>-->
-		<!--</div>-->
-	<!--</div>-->
+	<div class="row">
+		<div class="col-md-12">
+			<p>
+				<div class="alert alert-success" role="alert">请自行保存，服务器仅保存10分钟</div>
+			</p>
+		</div>
+	</div>
 </div>
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/scripts.js"></script>
-<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-<script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--<script src="js/jquery.min.js"></script>-->
+<!--<script src="js/bootstrap.min.js"></script>-->
+<!--<script src="js/scripts.js"></script>-->
+<!--<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>-->
+<!--<script src='//unpkg.com/valine/dist/Valine.min.js'></script>-->
 </body>
 <script>
 	$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
