--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,7 +43,7 @@
 					<div class="tab-pane active" id="panel-223024">
 						<div class="row">
 							<div class="col-md-6">
-								<img class="center-block img-responsive" alt="为所欲为" src="http://p5m79jjxo.bkt.clouddn.com/sorry.webp">
+								<img class="center-block img-responsive" alt="为所欲为" src="http://p5m79jjxo.bkt.clouddn.com/sorry.jpg">
 							</div>
 							<div class="col-md-6 pre-scrollable">
 								<form class="form-horizontal" role="form">
@@ -126,7 +126,7 @@
 					<div class="tab-pane" id="panel-445389">
 						<div class="row">
 							<div class="col-md-6">
-								<img class="center-block img-responsive" alt="王境泽" src="http://p5m79jjxo.bkt.clouddn.com/wangjingze.webp">
+								<img class="center-block img-responsive" alt="王境泽" src="http://p5m79jjxo.bkt.clouddn.com/wangjingze.jpg">
 							</div>
 							<div class="col-md-6">
 								<form class="form-horizontal" role="form">
@@ -210,7 +210,7 @@
 		</div>
 	</div>
 </div>
-<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!--<script src="js/jquery.min.js"></script>-->
 <!--<script src="js/bootstrap.min.js"></script>-->
