--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -291,7 +291,8 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				<div class="alert alert-success" role="alert">请自行保存，服务器仅保存10分钟<a href="https://github.com/li24361/sorryJava">源代码</a></div>
+				<div class="alert alert-success" role="alert">请自行保存，服务器仅保存10分钟，可以关注微信平台sorrygif，新模板推出会通知哦</div>
+				<img id="result" class="center-block img-responsive" src="http://p5m79jjxo.bkt.clouddn.com/gcode.jpg">
 			</p>
 		</div>
 	</div>
