--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -52,7 +52,7 @@
 								<form class="form-horizontal" role="form">
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											1
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="sorry_sen" placeholder="好啊">
@@ -60,7 +60,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											2
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="sorry_sen" placeholder="别说我是一等良民">
@@ -68,7 +68,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											3
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="sorry_sen" placeholder="就算你们真的想要诬告我">
@@ -76,7 +76,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											4
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="sorry_sen" placeholder="我有的是钱找律师帮我打官司">
@@ -84,7 +84,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											5
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="sorry_sen" placeholder="我想我根本不用坐牢">
@@ -92,7 +92,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											6
+											B:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="sorry_sen" placeholder="你别以为有钱了不起啊">
@@ -100,7 +100,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											7
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="sorry_sen" placeholder="sorry 有钱是真的能为所欲为的">
@@ -108,7 +108,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											8
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="sorry_sen" placeholder="不过我相信你不会明白这种感觉">
@@ -116,7 +116,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											9
+											C:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="sorry_sen" placeholder="不明白 不明白">
@@ -135,7 +135,7 @@
 								<form class="form-horizontal" role="form">
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											1
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="wangjingze_sen" placeholder="我就是饿死">
@@ -143,7 +143,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											2
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="wangjingze_sen" placeholder="死外边 从这跳下去">
@@ -151,7 +151,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											3
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="wangjingze_sen" placeholder="也不会吃你们 一点东西">
@@ -159,7 +159,7 @@
 									</div>
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
-											4
+											A:
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="wangjingze_sen" placeholder="真香">
@@ -178,7 +178,7 @@
 								<!--<form class="form-horizontal" role="form">-->
 									<!--<div class="form-group">-->
 										<!--<label  class="col-sm-2 control-label">-->
-											<!--1-->
+											<!--A:-->
 										<!--</label>-->
 										<!--<div class="col-sm-10">-->
 											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="如果各位有兴趣可以加入我空手道部">-->
@@ -186,7 +186,7 @@
 									<!--</div>-->
 									<!--<div class="form-group">-->
 										<!--<label  class="col-sm-2 control-label">-->
-											<!--2-->
+											<!--A:-->
 										<!--</label>-->
 										<!--<div class="col-sm-10">-->
 											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="不过要先经过选拔">-->
@@ -194,7 +194,7 @@
 									<!--</div>-->
 									<!--<div class="form-group">-->
 										<!--<label  class="col-sm-2 control-label">-->
-											<!--3-->
+											<!--A:-->
 										<!--</label>-->
 										<!--<div class="col-sm-10">-->
 											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="因为我只会训练精英">-->
@@ -202,7 +202,7 @@
 									<!--</div>-->
 									<!--<div class="form-group">-->
 										<!--<label  class="col-sm-2 control-label">-->
-											<!--4-->
+											<!--A:-->
 										<!--</label>-->
 										<!--<div class="col-sm-10">-->
 											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="绝对不会接受">-->
@@ -210,7 +210,7 @@
 									<!--</div>-->
 									<!--<div class="form-group">-->
 										<!--<label  class="col-sm-2 control-label">-->
-											<!--5-->
+											<!--A:-->
 										<!--</label>-->
 										<!--<div class="col-sm-10">-->
 											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="垃圾">-->
@@ -218,7 +218,7 @@
 									<!--</div>-->
 									<!--<div class="form-group">-->
 										<!--<label  class="col-sm-2 control-label">-->
-											<!--6-->
+											<!--B:-->
 										<!--</label>-->
 										<!--<div class="col-sm-10">-->
 											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="看我干嘛, 你把我当垃圾啊">-->
@@ -226,7 +226,7 @@
 									<!--</div>-->
 									<!--<div class="form-group">-->
 										<!--<label  class="col-sm-2 control-label">-->
-											<!--7-->
+											<!--A:-->
 										<!--</label>-->
 										<!--<div class="col-sm-10">-->
 											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="不要误会，我不是针对你">-->
@@ -234,7 +234,7 @@
 									<!--</div>-->
 									<!--<div class="form-group">-->
 										<!--<label  class="col-sm-2 control-label">-->
-											<!--8-->
+											<!--A:-->
 										<!--</label>-->
 										<!--<div class="col-sm-10">-->
 											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="我是说在座的各位">-->
@@ -242,7 +242,7 @@
 									<!--</div>-->
 									<!--<div class="form-group">-->
 										<!--<label  class="col-sm-2 control-label">-->
-											<!--9-->
+											<!--A:-->
 										<!--</label>-->
 										<!--<div class="col-sm-10">-->
 											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="都是垃圾">-->
@@ -260,10 +260,10 @@
 		<br><br>
 		<div class="col-md-12 text-center">
 			<label class="radio-inline">
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="simple" alt="小文件，质量低"> 精简模式(文件较小质量差)
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="simple" alt="小文件，质量低"> 小图(表情包)
 			</label>
 			<label class="radio-inline">
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="normal" checked alt="大文件，质量高"> 正常模式（文件较大清晰）
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="normal" checked alt="大文件，质量高"> 大图（发帖发微博）
 			</label>
 		</div>
 		<br><br>
@@ -282,9 +282,11 @@
 		<div class="col-md-12">
 			<p>
 				<img id="result" class="center-block img-responsive" src="">
-				<button id="downloadbtn" type="button" class="btn btn-default center-block hidden" aria-label="Left Align">
-					<a id="download" href="#" target="_blank">猛击下载<span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span></a>
-				</button>
+				<a id="download" href="#" target="_blank">
+					<button id="downloadbtn" type="button" class="btn btn-default center-block hidden" aria-label="Left Align">
+						猛击打开<span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+					</button>
+				</a>
 			</p>
 		</div>
 	</div>
@@ -327,10 +329,22 @@
 		var template = $('#template').val()
 		var inputs = $("input[name='" + template + "_sen']")
 		var all = [];
+		var notchange = true;
 		inputs.each(function (i, e) {
 			e.value = e.value === '' ? e.placeholder : e.value
+            notchange = e.value !== '';
 			all.push(e.value)
 		})
+        console.log(notchange);
+        if (notchange){
+            alert("生成成功！快去看看吧！");
+            $('#download').attr('href', "http://p5m79jjxo.bkt.clouddn.com/"+template+".gif");
+            $btn.button('reset')
+            $('#render').prop('disabled', false);
+            $('#downloadbtn').removeClass('hidden')
+            return;
+		}
+
 		var json = {
 			"templateName": template,
 			"sentence": all.join(),
@@ -345,7 +359,7 @@
 			dataType: 'json'
 		}).done(function (msg) {
 			if (msg.code=='0'){
-				alert("生成成功！: " + msg.result);
+                alert("生成成功！快去看看吧！");
 				$('#download').attr('href', msg.result);
 			} else {
 				alert("服务器爆掉了，请稍后再试！赞赏给作者点鼓励吧。");
