--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -338,7 +338,7 @@
 			all.push(e.value)
 		})
         if (!ischange){
-            alert("生成成功！快去看看吧！");
+            alert("生成成功！欢迎扫码关注公众号！");
             $('#download').attr('href', "http://p5m79jjxo.bkt.clouddn.com/"+template+".gif");
             $btn.button('reset')
             $('#render').prop('disabled', false);
