--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
 						<a href="#panel-2" data-toggle="tab" id="wangjingze">王境泽</a>
 					</li>
 					<li>
-						<!--<a href="#panel-3" data-toggle="tab" id="dashixiong">大师兄</a>-->
+						<a href="#panel-3" data-toggle="tab" id="dashixiong">大师兄</a>
 					</li>
 				</ul>
 				<div class="tab-content">
@@ -169,89 +169,89 @@
 							</div>
 						</div>
 					</div>
-					<!--<div class="tab-pane" id="panel-3">-->
-						<!--<div class="row">-->
-							<!--<div class="col-md-6">-->
-								<!--<img class="center-block img-responsive" alt="大师兄" src="http://p5m79jjxo.bkt.clouddn.com/dashixiong.jpg">-->
-							<!--</div>-->
-							<!--<div class="col-md-6 pre-scrollable">-->
-								<!--<form class="form-horizontal" role="form">-->
-									<!--<div class="form-group">-->
-										<!--<label  class="col-sm-2 control-label">-->
-											<!--A:-->
-										<!--</label>-->
-										<!--<div class="col-sm-10">-->
-											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="如果各位有兴趣可以加入我空手道部">-->
-										<!--</div>-->
-									<!--</div>-->
-									<!--<div class="form-group">-->
-										<!--<label  class="col-sm-2 control-label">-->
-											<!--A:-->
-										<!--</label>-->
-										<!--<div class="col-sm-10">-->
-											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="不过要先经过选拔">-->
-										<!--</div>-->
-									<!--</div>-->
-									<!--<div class="form-group">-->
-										<!--<label  class="col-sm-2 control-label">-->
-											<!--A:-->
-										<!--</label>-->
-										<!--<div class="col-sm-10">-->
-											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="因为我只会训练精英">-->
-										<!--</div>-->
-									<!--</div>-->
-									<!--<div class="form-group">-->
-										<!--<label  class="col-sm-2 control-label">-->
-											<!--A:-->
-										<!--</label>-->
-										<!--<div class="col-sm-10">-->
-											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="绝对不会接受">-->
-										<!--</div>-->
-									<!--</div>-->
-									<!--<div class="form-group">-->
-										<!--<label  class="col-sm-2 control-label">-->
-											<!--A:-->
-										<!--</label>-->
-										<!--<div class="col-sm-10">-->
-											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="垃圾">-->
-										<!--</div>-->
-									<!--</div>-->
-									<!--<div class="form-group">-->
-										<!--<label  class="col-sm-2 control-label">-->
-											<!--B:-->
-										<!--</label>-->
-										<!--<div class="col-sm-10">-->
-											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="看我干嘛, 你把我当垃圾啊">-->
-										<!--</div>-->
-									<!--</div>-->
-									<!--<div class="form-group">-->
-										<!--<label  class="col-sm-2 control-label">-->
-											<!--A:-->
-										<!--</label>-->
-										<!--<div class="col-sm-10">-->
-											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="不要误会，我不是针对你">-->
-										<!--</div>-->
-									<!--</div>-->
-									<!--<div class="form-group">-->
-										<!--<label  class="col-sm-2 control-label">-->
-											<!--A:-->
-										<!--</label>-->
-										<!--<div class="col-sm-10">-->
-											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="我是说在座的各位">-->
-										<!--</div>-->
-									<!--</div>-->
-									<!--<div class="form-group">-->
-										<!--<label  class="col-sm-2 control-label">-->
-											<!--A:-->
-										<!--</label>-->
-										<!--<div class="col-sm-10">-->
-											<!--<input type="text" class="form-control" name="wangjingze_sen" placeholder="都是垃圾">-->
-										<!--</div>-->
-									<!--</div>-->
-								<!--</form>-->
-							<!--</div>-->
-						<!--</div>-->
-					<!--</div>-->
+					<div class="tab-pane" id="panel-3">
+						<div class="row">
+							<div class="col-md-6">
+								<img class="center-block img-responsive" alt="大师兄" src="http://p5m79jjxo.bkt.clouddn.com/dashixiong.jpg">
+							</div>
+							<div class="col-md-6 pre-scrollable">
+								<form class="form-horizontal" role="form">
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="wangjingze_sen" placeholder="如果各位有兴趣可以加入我空手道部">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="wangjingze_sen" placeholder="不过要先经过选拔">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="wangjingze_sen" placeholder="因为我只会训练精英">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="wangjingze_sen" placeholder="绝对不会接受">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="wangjingze_sen" placeholder="垃圾">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											B:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="wangjingze_sen" placeholder="看我干嘛, 你把我当垃圾啊">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="wangjingze_sen" placeholder="不要误会，我不是针对你">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="wangjingze_sen" placeholder="我是说在座的各位">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="wangjingze_sen" placeholder="都是垃圾">
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
