--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -181,7 +181,7 @@
 											A:
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="wangjingze_sen" placeholder="如果各位有兴趣可以加入我空手道部">
+											<input type="text" class="form-control" name="dashixiong_sen" placeholder="如果各位有兴趣可以加入我空手道部">
 										</div>
 									</div>
 									<div class="form-group">
@@ -189,7 +189,7 @@
 											A:
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="wangjingze_sen" placeholder="不过要先经过选拔">
+											<input type="text" class="form-control" name="dashixiong_sen" placeholder="不过要先经过选拔">
 										</div>
 									</div>
 									<div class="form-group">
@@ -197,7 +197,7 @@
 											A:
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="wangjingze_sen" placeholder="因为我只会训练精英">
+											<input type="text" class="form-control" name="dashixiong_sen" placeholder="因为我只会训练精英">
 										</div>
 									</div>
 									<div class="form-group">
@@ -205,7 +205,7 @@
 											A:
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="wangjingze_sen" placeholder="绝对不会接受">
+											<input type="text" class="form-control" name="dashixiong_sen" placeholder="绝对不会接受">
 										</div>
 									</div>
 									<div class="form-group">
@@ -213,7 +213,7 @@
 											A:
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="wangjingze_sen" placeholder="垃圾">
+											<input type="text" class="form-control" name="dashixiong_sen" placeholder="垃圾">
 										</div>
 									</div>
 									<div class="form-group">
@@ -221,7 +221,7 @@
 											B:
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="wangjingze_sen" placeholder="看我干嘛, 你把我当垃圾啊">
+											<input type="text" class="form-control" name="dashixiong_sen" placeholder="看我干嘛, 你把我当垃圾啊">
 										</div>
 									</div>
 									<div class="form-group">
@@ -229,7 +229,7 @@
 											A:
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="wangjingze_sen" placeholder="不要误会，我不是针对你">
+											<input type="text" class="form-control" name="dashixiong_sen" placeholder="不要误会，我不是针对你">
 										</div>
 									</div>
 									<div class="form-group">
@@ -237,7 +237,7 @@
 											A:
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="wangjingze_sen" placeholder="我是说在座的各位">
+											<input type="text" class="form-control" name="dashixiong_sen" placeholder="我是说在座的各位">
 										</div>
 									</div>
 									<div class="form-group">
@@ -245,7 +245,7 @@
 											A:
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" name="wangjingze_sen" placeholder="都是垃圾">
+											<input type="text" class="form-control" name="dashixiong_sen" placeholder="都是垃圾">
 										</div>
 									</div>
 								</form>
