--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,7 +31,7 @@
 		<p></p>
 		<div class="col-md-12">
 			<div class="tabbable" id="tabs1">
-				<ul class="nav nav-tabs">
+				<ul class="nav nav-pills">
 					<li class="active">
 						<a href="#panel-1" data-toggle="tab" id="sorry">为所欲为</a>
 					</li>
@@ -42,13 +42,14 @@
 						<a href="#panel-3" data-toggle="tab" id="dashixiong">大师兄</a>
 					</li>
 				</ul>
+				<br>
 				<div class="tab-content">
 					<div class="tab-pane active" id="panel-1">
 						<div class="row">
 							<div class="col-md-6">
 								<img class="center-block img-responsive" alt="为所欲为" src="http://p5m79jjxo.bkt.clouddn.com/sorry.jpg">
 							</div>
-							<div class="col-md-6 pre-scrollable">
+							<div class="col-md-6">
 								<form class="form-horizontal" role="form">
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
@@ -131,7 +132,7 @@
 							<div class="col-md-6">
 								<img class="center-block img-responsive" alt="王境泽" src="http://p5m79jjxo.bkt.clouddn.com/wangjingze.jpg">
 							</div>
-							<div class="col-md-6 pre-scrollable">
+							<div class="col-md-6">
 								<form class="form-horizontal" role="form">
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
@@ -174,7 +175,7 @@
 							<div class="col-md-6">
 								<img class="center-block img-responsive" alt="大师兄" src="http://p5m79jjxo.bkt.clouddn.com/dashixiong.jpg">
 							</div>
-							<div class="col-md-6 pre-scrollable">
+							<div class="col-md-6">
 								<form class="form-horizontal" role="form">
 									<div class="form-group">
 										<label  class="col-sm-2 control-label">
