增加 窃格瓦拉

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,9 @@
 					<li>
 						<a href="#panel-3" data-toggle="tab" id="dashixiong">大师兄</a>
 					</li>
+					<li>
+						<a href="#panel-4" data-toggle="tab" id="dagong">打工</a>
+					</li>
 				</ul>
 				<br>
 				<div class="tab-content">
@@ -247,6 +250,65 @@
 										</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" name="dashixiong_sen" placeholder="都是垃圾">
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+					<div class="tab-pane" id="panel-4">
+						<div class="row">
+							<div class="col-md-6">
+								<img class="center-block img-responsive" alt="打工" src="http://p5m79jjxo.bkt.clouddn.com/dagong.jpg">
+							</div>
+							<div class="col-md-6">
+								<form class="form-horizontal" role="form">
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="dagong_sen" placeholder="没有钱啊">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="dagong_sen" placeholder="不做的话没有钱用">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											B:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="dagong_sen" placeholder="那你不会去打工啊">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											B:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="dagong_sen" placeholder="有手有脚的">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="dagong_sen" placeholder="打工是不可能打工的">
+										</div>
+									</div>
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">
+											A:
+										</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="dagong_sen" placeholder="这辈子不可能打工的">
 										</div>
 									</div>
 								</form>
